[package]
name = "lattice-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.8.0"
rand = '0.8.4'
hdf5 = "0.8.1"
hdf5-sys = {version = "0.8.1", features = ["static"]}
num-complex ="0.4.2"
clap = { version = "4.0.29", features = ["derive"] }
anyhow = "1.0"
[build]
rustflags = ["-C", "target-feature=+crt-static", "link-self-contained=yes"]
target = "x86_64-unknown-linux-gnu"
